// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deve renderizar corretamente 1`] = `
.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0px;
  font-size: 0.75rem;
}

.emotion-7 > *:not(:last-child) {
  margin-right: 0.25rem;
}

.emotion-2 {
  background-color: transparent;
  border: none;
  border-radius: 4px;
  color: #666666;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.emotion-2 span {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-2:disabled {
  opacity: 0.5;
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #056DFF;
}

.emotion-2:hover {
  background: #e6e6e6;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-3 {
  background-color: #ffffff;
  border: solid 1px #cccccc;
  border-radius: 2px;
  color: #4d4d4d;
  font-family: "Noto Sans",sans-serif;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 1rem;
  width: 100%;
  -webkit-transition: all .2s;
  transition: all .2s;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  width: 47px;
  text-align: center;
}

.emotion-3::-webkit-input-placeholder {
  color: #cccccc;
}

.emotion-3::-moz-placeholder {
  color: #cccccc;
}

.emotion-3:-ms-input-placeholder {
  color: #cccccc;
}

.emotion-3::placeholder {
  color: #cccccc;
}

.emotion-3:disabled {
  background-color: #f2f2f7;
}

.emotion-3:not(:disabled):hover {
  border-color: #999999;
}

.emotion-3:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-3:not(:disabled):active {
  border-color: #056DFF;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

<div
  class="emotion-7"
>
  <button
    class="emotion-2"
    title="Página anterior"
    type="button"
  >
    <span>
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M14.47 5.64l1.42 1.41L10.94 12l4.95 4.95-1.42 1.41L8.11 12l6.36-6.36z"
            id="Seta-esquerda"
          />
        </svg>
      </span>
    </span>
  </button>
  <input
    class="emotion-3"
    type="text"
    value="6"
  />
  <span>
    de 10
  </span>
  <button
    class="emotion-2"
    title="Próxima página"
    type="button"
  >
    <span>
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M9.53 18.36l-1.42-1.41L13.06 12 8.11 7.05l1.42-1.41L15.89 12l-6.36 6.36z"
            id="Seta-direita"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`deve renderizar corretamente 2`] = `
.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0px;
  font-size: 0.75rem;
}

.emotion-7 > *:not(:last-child) {
  margin-right: 0.25rem;
}

.emotion-2 {
  background-color: transparent;
  border: none;
  border-radius: 4px;
  color: #666666;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.emotion-2 span {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-2:disabled {
  opacity: 0.5;
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #056DFF;
}

.emotion-2:hover {
  background: #e6e6e6;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-3 {
  background-color: #ffffff;
  border: solid 1px #cccccc;
  border-radius: 2px;
  color: #4d4d4d;
  font-family: "Noto Sans",sans-serif;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 1rem;
  width: 100%;
  -webkit-transition: all .2s;
  transition: all .2s;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  width: 47px;
  text-align: center;
}

.emotion-3::-webkit-input-placeholder {
  color: #cccccc;
}

.emotion-3::-moz-placeholder {
  color: #cccccc;
}

.emotion-3:-ms-input-placeholder {
  color: #cccccc;
}

.emotion-3::placeholder {
  color: #cccccc;
}

.emotion-3:disabled {
  background-color: #f2f2f7;
}

.emotion-3:not(:disabled):hover {
  border-color: #999999;
}

.emotion-3:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-3:not(:disabled):active {
  border-color: #056DFF;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

<div
  class="emotion-7"
>
  <button
    class="emotion-2"
    disabled=""
    title="Página anterior"
    type="button"
  >
    <span>
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M14.47 5.64l1.42 1.41L10.94 12l4.95 4.95-1.42 1.41L8.11 12l6.36-6.36z"
            id="Seta-esquerda"
          />
        </svg>
      </span>
    </span>
  </button>
  <input
    class="emotion-3"
    type="text"
    value="1"
  />
  <span>
    de 10
  </span>
  <button
    class="emotion-2"
    title="Próxima página"
    type="button"
  >
    <span>
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M9.53 18.36l-1.42-1.41L13.06 12 8.11 7.05l1.42-1.41L15.89 12l-6.36 6.36z"
            id="Seta-direita"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`deve renderizar corretamente 3`] = `
.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0px;
  font-size: 0.75rem;
}

.emotion-7 > *:not(:last-child) {
  margin-right: 0.25rem;
}

.emotion-2 {
  background-color: transparent;
  border: none;
  border-radius: 4px;
  color: #666666;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.emotion-2 span {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-2:disabled {
  opacity: 0.5;
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #056DFF;
}

.emotion-2:hover {
  background: #e6e6e6;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-3 {
  background-color: #ffffff;
  border: solid 1px #cccccc;
  border-radius: 2px;
  color: #4d4d4d;
  font-family: "Noto Sans",sans-serif;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 1rem;
  width: 100%;
  -webkit-transition: all .2s;
  transition: all .2s;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  width: 47px;
  text-align: center;
}

.emotion-3::-webkit-input-placeholder {
  color: #cccccc;
}

.emotion-3::-moz-placeholder {
  color: #cccccc;
}

.emotion-3:-ms-input-placeholder {
  color: #cccccc;
}

.emotion-3::placeholder {
  color: #cccccc;
}

.emotion-3:disabled {
  background-color: #f2f2f7;
}

.emotion-3:not(:disabled):hover {
  border-color: #999999;
}

.emotion-3:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #f2f2f7,0 0 0 4px #056DFF;
}

.emotion-3:not(:disabled):active {
  border-color: #056DFF;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

<div
  class="emotion-7"
>
  <button
    class="emotion-2"
    disabled=""
    title="Página anterior"
    type="button"
  >
    <span>
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M14.47 5.64l1.42 1.41L10.94 12l4.95 4.95-1.42 1.41L8.11 12l6.36-6.36z"
            id="Seta-esquerda"
          />
        </svg>
      </span>
    </span>
  </button>
  <input
    class="emotion-3"
    type="text"
    value="1"
  />
  <span>
    de 9
  </span>
  <button
    class="emotion-2"
    title="Próxima página"
    type="button"
  >
    <span>
      <span
        class="emotion-1"
      >
        <svg
          aria-hidden="true"
          class="emotion-0"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M9.53 18.36l-1.42-1.41L13.06 12 8.11 7.05l1.42-1.41L15.89 12l-6.36 6.36z"
            id="Seta-direita"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;
